--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="html-root">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,6 +26,20 @@
             line-height: 1.6;
             color: var(--black);
             background: linear-gradient(135deg, var(--white) 0%, #f8f8f8 100%);
+        }
+
+        body[dir="rtl"], html[dir="rtl"] {
+            direction: rtl;
+        }
+
+        body[dir="rtl"] .section,
+        html[dir="rtl"] .section {
+            text-align: right;
+        }
+
+        body[dir="rtl"] .nav-container,
+        html[dir="rtl"] .nav-container {
+            flex-direction: row-reverse;
         }
         
         .header {
@@ -107,6 +121,11 @@
 
 
         /* New: background and overlap for countdown */
+        #countdown {
+            direction: ltr !important;
+            text-align: center !important;
+        }
+
         #countdown {
             background: none;
             box-shadow: none;
@@ -565,8 +584,8 @@
     <img src="./imgs/cover.jpg" alt="Cover" style="display:block;margin:0 auto;max-width:100%;height:auto;" />
     </header>
 
-    <section id="countdown" class="section" style="margin-top:-60px;position:relative;z-index:20;border-radius:30px;width:90vw;max-width:900px;left:50%;transform:translateX(-50%);padding:40px 0;">
-        <div class="countdown-container">
+    <section id="countdown" class="section">
+    <div class="countdown-container" style="margin-top: -80px;">
             <div class="countdown-card">
                 <span id="countdown-days" class="countdown-number">0</span>
                 <div class="countdown-label">Days</div>
@@ -583,18 +602,19 @@
     </section>
     <nav class="nav">
         <div class="nav-container">
-            <button id="lang-toggle" style="background: var(--pink); color: white; border: none; padding: 8px 16px; border-radius: 20px; cursor: pointer; font-weight: 600;">English</button>
+            <select id="lang-select" style="background: var(--pink); color: white; border: none; padding: 8px 16px; border-radius: 20px; font-weight: 600; cursor: pointer;">
+                <option value="al" lang="sq">Shqip</option>
+                <option value="en" lang="en">English</option>
+                <option value="he" lang="he">עברית</option>
+            </select>
             <a href="#video" class="nav-link">Proposal Video</a>
             <a href="#location" class="nav-link">Wedding Details</a>
             <a href="#rsvp" class="nav-link">RSVP</a>
             <a href="#wedding-photos" class="nav-link">Wedding Photos</a>
-			<a href="#timer" class="nav-link">Our Journey</a>
+            <a href="#timer" class="nav-link">Our Journey</a>
+            <a href="#faq" class="nav-link">FAQ</a>
         </div>
     </nav>
-
-    <section id="countdown" class="section">
-    <!-- removed duplicate -->
-    </section>
 
     <section id="video" class="section">
         <div class="container">
@@ -643,6 +663,11 @@
                     <div class="time">20:30</div>
                     <p>Join us as we exchange vows in an intimate outdoor ceremony surrounded by nature and our loved ones.</p>
                 </div>
+            </div>
+            <div style="text-align:center; margin-top:32px;">
+                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Shachar+%26+Bes+Wedding&dates=20260527T163000Z/20260527T210000Z&details=Join+us+for+our+wedding+celebration!&location=Your+Venue+Address+Here&sf=true&output=xml" target="_blank" rel="noopener" class="add-to-calendar-btn" style="display:inline-block;padding:12px 28px;background:var(--pink);color:white;font-size:1.1em;border-radius:8px;text-decoration:none;font-weight:600;box-shadow:0 2px 8px rgba(0,0,0,0.08);transition:background 0.2s;" title="Add to Google Calendar" aria-label="Add to Google Calendar">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" style="vertical-align:middle;"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+                </a>
             </div>
         </div>
     </section>
@@ -714,6 +739,26 @@
         <div class="container" style="text-align:center;">
             
             <img src="./imgs/std.jpg" alt="Our Memory" style="max-width:600px;width:100%;height:auto;display:inline-block;" />
+        </div>
+    </section>
+
+    <section id="faq" class="section">
+        <div class="container">
+            <h2 class="section-title">FAQ</h2>
+            <div class="faq-list">
+                <div class="faq-item">
+                    <h3 class="faq-question">What type of food will be served?</h3>
+                    <p class="faq-answer">Appetizers and main course, all kosher and basari. There will be vegan option as well.</p>
+                </div>
+                <div class="faq-item">
+                    <h3 class="faq-question">What should I wear?</h3>
+                    <p class="faq-answer">The wedding is mostly indoors, feel whatever you feel like.</p>
+                </div>
+                <div class="faq-item">
+                    <h3 class="faq-question">Are you excited as we?</h3>
+                    <p class="faq-answer">YES</p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -810,35 +855,58 @@
         // Language toggle functionality
         const translations = {
             he: {
-                nav: ["ההצעה", "פרטי החתונה", "אישור הגעה", "תמונות מהחתונה", "המסע שלנו"],
-                headerTitle: "Shachar & Bes",
-                subtitle: "The Wedding",
+                nav: ["ההצעה", "פרטים", "אישור הגעה", "תמונות מהחתונה", "המסע שלנו", "שאלות נפוצות"],
+                faqTitle: "שאלות נפוצות",
+                faqQuestions: [
+                    "איזה אוכל יוגש?",
+                    "מה כדאי ללבוש?",
+                    "האם אתם מתרגשים כמונו?"
+                ],
+                faqAnswers: [
+                    "מנות ראשונות ועיקריות, הכל כשר ובשרי. תהיה גם אופציה טבעונית.",
+                    "החתונה מתקיימת בעיקר באולם סגור, תרגישו בנוח לבוא כפי שנעים לכם.",
+                    "כן!!"
+                ],
+                headerTitle: "שחר ובס",
+                subtitle: "החתונה",
                 date: "27.5.2026",
                 countdownLabels: ["ימים", "שעות", "דקות"],
                 proposalTitle: "ההצעה",
-                detailsTitle: "?מתי",
+                detailsTitle: "פרטים ",
                 reception: "קבלת פנים",
                 ceremony: "חופה וקידושין",
-                receptionText: "בואו לחגוג איתנו עם ארוחת ערב, ריקודים וזיכרונות בלתי נשכחים תחת הכוכבים",
-                ceremonyText: "הצטרפו אלינו כשנחליף נדרים בטקס אינטימי, מוקפים באהובינו",
-                venueTitle: "?איפה",
-                venueName: "גארדן הוטל",
+                receptionText: "בואו לחגוג איתנו עם אוכל, ריקודים וזיכרונות בלתי נשכחים תחת כיפת השמיים.",
+                ceremonyText: "הצטרפו אלינו כשנעמוד תחת החופה בטקס אינטימי מוקפים בטבע וביקרים לנו.",
+                venueTitle: "המקום",
+                venueName: "מלון גארדן",
                 venueAddress: "קדושי יאסי 2, חיפה",
                 venueParking: "חניה זמינה",
                 weddingPhotosTitle: "תמונות מהחתונה",
-                comingSoon: "!בקרוב",
-                comingSoonText: "תמונות החתונה היפות שלנו יהיו זמינות כאן לאחר החתונה",
+                comingSoon: "בקרוב!",
+                comingSoonText: "תמונות החתונה שלנו יהיו זמינות כאן בקרוב. אנחנו לא יכולים לחכות לשתף אתכם בכל הרגעים הקסומים!",
                 magnetsTitle: "מגנטים מהחתונה",
-                magnetsText: "מזכרות מושלמות מיום החתונה יהיו זמינות כאן",
+                magnetsText: "מגנטים מיוחדים עם התמונות האהובות עלינו יהיו זמינים להורדה כאן. מזכרת מושלמת ליום החתונה שלנו!",
                 rsvpTitle: "אישור הגעה",
-                journeyTitle: "המסע שלנו",
-                journeyText: "מאז אותו יום בו נפגשנו לראשונה - 10 באוקטובר, 2019",
+                journeyTitle: "המסע שלנו יחד",
+                journeyText: "מאז אותו יום מיוחד ב-10 באוקטובר 2019 שבו נפגשו דרכינו, אנחנו כותבים יחד את סיפור האהבה שלנו. כל יום מקרב אותנו לרגע הזה – יום החתונה שלנו!",
                 memoriesTitle: "הזיכרונות שלנו",
-                footer: "מחכים לראותכם, שחר ובס",
+                footer: "באהבה, שחר ובס",
                 labels: ["שנים", "חודשים", "ימים", "סה״כ ימים"]
             },
+
             en: {
-                nav: ["Proposal Video", "Wedding Details", "RSVP", "Wedding Photos", "Our Journey"],
+                nav: ["Proposal Video", "Wedding Details", "RSVP", "Wedding Photos", "Our Journey", "FAQ"],
+                faqTitle: "FAQ",
+                faqQuestions: [
+                    "What type of food will be served?",
+                    "What should I wear?",
+                    "Are you excited as we?"
+                ],
+                faqAnswers: [
+                    "Appetizers and main course, all kosher and basari. There will be vegan option as well.",
+                    "The wedding is mostly indoors, feel whatever you feel like.",
+                    "YES"
+                ],
                 headerTitle: "Shachar & Bes",
                 subtitle: "The Wedding",
                 date: "27.5.2026",
@@ -864,16 +932,71 @@
                 memoriesTitle: "",
                 footer: "With love, Shachar & Bes",
                 labels: ["Years", "Months", "Days", "Total Days"]
+            },
+            al: {
+                nav: ["Video e Propozimit", "Detajet e Dasmës", "RSVP", "Fotot e Dasmës", "Udhëtimi Ynë", "Pyetje"],
+                faqTitle: "Pyetje",
+                faqQuestions: [
+                    "Çfarë ushqimi do të shërbehet?",
+                    "Çfarë duhet të vesh?",
+                    "A jeni po aq të emocionuar sa ne?"
+                ],
+                faqAnswers: [
+                    "Meze dhe pjatë kryesore, të gjitha kosher dhe mish. Do të ketë edhe opsion vegan.",
+                    "Dasma është kryesisht brenda, vishuni si të ndiheni rehat.",
+                    "PO!"
+                ],
+                headerTitle: "Shachar & Bes",
+                subtitle: "Dasma",
+                date: "27.5.2026",
+                countdownLabels: ["Ditë", "Orë", "Minuta"],
+                proposalTitle: "Propozimi",
+                detailsTitle: "Detajet e Dasmës",
+                reception: "Mikpritja",
+                ceremony: "Ceremonia",
+                receptionText: "Festoni me ne me darkë, vallëzim dhe kujtime të paharrueshme nën yje.",
+                ceremonyText: "Bashkohuni me ne ndërsa shkëmbejmë premtimet në një ceremoni intime në natyrë me të dashurit tanë.",
+                venueTitle: "Vendi",
+                venueName: "Garden Hotel",
+                venueAddress: "Kdoshey Yassi 2, Haifa",
+                venueParking: "Parkim i disponueshëm",
+                weddingPhotosTitle: "Fotot e Dasmës",
+                comingSoon: "Së Shpejti!",
+                comingSoonText: "Fotot tona të bukura të dasmës do të jenë së shpejti këtu. Mezi presim t'i ndajmë me ju!",
+                magnetsTitle: "Magnetët e Dasmës",
+                magnetsText: "Magnetë të veçantë me fotot tona të preferuara do të jenë për t’u shkarkuar këtu.",
+                rsvpTitle: "RSVP",
+                journeyTitle: "Udhëtimi Ynë",
+                journeyText: "Që nga 10 tetori 2019 kur u takuam për herë të parë, kemi shkruar historinë tonë të dashurisë çdo ditë. Tani jemi gati për ditën tonë të dasmës!",
+                memoriesTitle: "Kujtimet Tona",
+                footer: "Me dashuri, Shachar & Bes",
+                labels: ["Vite", "Muaj", "Ditë", "Ditë gjithsej"]
             }
         };
 
-        let currentLang = "he";
+        let currentLang = "al";
 
         function applyTranslations(lang) {
             const t = translations[lang];
-            document.querySelectorAll('.nav-link').forEach((el, i) => el.textContent = t.nav[i]);
-            // The following elements have been removed from the HTML, so skip updating them:
-            // .main-title, .subtitle, .date, #countdown .section-title, #photos .section-title, #photos .photo-placeholder
+            const navLinks = Array.from(document.querySelectorAll('.nav-link'));
+            navLinks.forEach((el, i) => el.textContent = t.nav[i]);
+            const navContainer = document.querySelector('.nav-container');
+            if (lang === 'he') {
+                navLinks.reverse().forEach(link => navContainer.appendChild(link));
+            } else {
+                // Restore original order: select is always first, then nav-links in original order
+                const select = navContainer.querySelector('#lang-select');
+            }
+            // FAQ translations
+            if (document.querySelector('#faq')) {
+                document.querySelector('#faq .section-title').textContent = t.faqTitle || 'FAQ';
+                const faqQuestions = document.querySelectorAll('#faq .faq-question');
+                const faqAnswers = document.querySelectorAll('#faq .faq-answer');
+                if (t.faqQuestions && t.faqAnswers) {
+                    faqQuestions.forEach((el, i) => { if (t.faqQuestions[i]) el.textContent = t.faqQuestions[i]; });
+                    faqAnswers.forEach((el, i) => { if (t.faqAnswers[i]) el.textContent = t.faqAnswers[i]; });
+                }
+            }
             document.querySelectorAll('#countdown .countdown-label').forEach((el, i) => el.textContent = t.countdownLabels[i]);
             document.querySelector('#video .section-title').textContent = t.proposalTitle;
             document.querySelector('#details .section-title').textContent = t.detailsTitle;
@@ -881,7 +1004,6 @@
             document.querySelectorAll('#details .detail-card p')[0].textContent = t.receptionText;
             document.querySelectorAll('#details .detail-card h3')[1].textContent = t.ceremony;
             document.querySelectorAll('#details .detail-card p')[1].textContent = t.ceremonyText;
-            // document.getElementById('countdown-desc').innerHTML = t.countdownDesc; // No longer present
             document.querySelector('#location .section-title').textContent = t.venueTitle;
             document.querySelector('#location .location-text h3').textContent = t.venueName;
             document.querySelector('#location .location-text p strong').textContent = "כתובת:";
@@ -900,14 +1022,26 @@
             document.querySelectorAll('#timer .timer-label').forEach((el, i) => el.textContent = t.labels[i]);
         }
 
-        document.getElementById('lang-toggle').addEventListener('click', () => {
-            currentLang = currentLang === "he" ? "en" : "he";
-            applyTranslations(currentLang);
-            document.getElementById('lang-toggle').textContent = currentLang === "he" ? "English" : "עברית";
-        });
+    document.getElementById('lang-select').addEventListener('change', (e) => {
 
-        // Apply default language (Hebrew)
-        applyTranslations("he");
+        const lang = e.target.value;
+        // Set RTL for Hebrew, LTR otherwise
+        const htmlRoot = document.getElementById('html-root');
+        if (lang === 'he') {
+            htmlRoot.setAttribute('dir', 'rtl');
+            document.body.setAttribute('dir', 'rtl');
+        } else {
+            htmlRoot.setAttribute('dir', 'ltr');
+            document.body.setAttribute('dir', 'ltr');
+        }
+        applyTranslations(lang);
+    });
+
+        // Apply default language (Albanian)
+    // Set initial direction
+    document.getElementById('html-root').setAttribute('dir', 'ltr');
+    document.body.setAttribute('dir', 'ltr');
+    applyTranslations("al");
 
     </script>
 </body>
